--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -1034,7 +1034,6 @@ p {
 
               <section id="section_NAVBAR">
                 <a id="_NAVBAR"><h2><codeG>Navbar</codeG></h2></a>
-                <a id="navhtml"><h2>&lt;HTML&gt;</h2></a>
                 <p>
                   Final thing to do before we finish this lesson and get into the project, is do a quick tutorial on
                   how to make a basic floating header.
@@ -1044,6 +1043,9 @@ p {
                   navigational links to take you to other places on the site. The best headers are the ones that
                   follow you as you scroll down the page.
                 </p>
+                <a id="navhtml"><h2>&lt;HTML&gt;</h2></a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <a id="navcss"><h2>&lt;CSS&gt;</h2></a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                   consequat.
